Copyright (C) 2017 Alpha Griffin
@%@~LICENSE~@%@

saw_080717_1 - Log the proper post when upvoting. Add curation section to README file.

saw_080517_1 - Fix thy self.

saw_080417_4 - Supply voter account id to post.upvote().

saw_080417_3 - More fixes for amount. Better exception handling.

saw_080417_2 - Fix for proper usage of Amount class.

saw_080417_1 - Add curate mode.

saw_073117_3 - Do not delete from dictionary while iterating.

saw_073117_2 - Use commit.post() instead of the buggy post.edit().

saw_073117_1 - Add timely mode.

saw_072717_2 - Make sure command script gets installed during `make install`.

saw_072717_1 - Boiler is functional!

saw_072617_3 - Add simple startup script and "run" Makefile target.

saw_072617_2 - Simple README.

saw_072617_1 - First commit for boiler.
